moved x-api-key from code to properties file

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -3,3 +3,4 @@ refresh_token=AQA3ei_9E7tpr8ysYCqLZSBA2g7JYfiRLvwxLqcqBAJWaFhkUzuukSkkcWzakxKTEX
 client_id=c6f8f03d4147459dba8ab79812a450dc
 client_secret=f9bd905eb3254af19385c9ccc0780a57
 user_id=45hq3h450zgcppzk5x7rl57m9
+x_api_key=PMAK-669205429e896000011546a5-271bab936cefac37b4b9f52248f014c4ec
