--- a/pom.xml
+++ b/pom.xml
@@ -106,15 +106,13 @@
           <target>${maven.compiler.target}</target>
         </configuration>
       </plugin>
-
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${maven.surefire.plugin.version}</version>
         <configuration>
-          <suiteXmlFiles>
-            <suiteXmlFile>testng.xml</suiteXmlFile>
-          </suiteXmlFiles>
+          <parallel>methods</parallel>
+          <threadCount>10</threadCount>
           <argLine>
             -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
           </argLine>
@@ -127,7 +125,6 @@
           </dependency>
         </dependencies>
       </plugin>
-
       <plugin>
         <groupId>io.qameta.allure</groupId>
         <artifactId>allure-maven</artifactId>
@@ -136,7 +133,6 @@
           <reportVersion>${allure.maven.version}</reportVersion>
         </configuration>
       </plugin>
-
     </plugins>
   </build>
 </project>
